syntax = "proto3";

package network;
option go_package="./;network";

message code_header_values {
    repeated string values = 1;
}

// normal request
message code_request {
    string request_id = 1;
    string     method = 2;
    string        uri = 3;
    bytes        body = 4;
    map<string, code_header_values> header = 5;
}

message code_response {
    string request_id = 1;
    uint32       code = 2;
    bytes        body = 3;
    map<string, code_header_values> header = 4;
}

// websocket
message code_connect {
    string request_id = 1;
    string        uri = 2;
    map<string, code_header_values> header = 3;
}

message code_data {
    string request_id = 1;
    bytes        data = 2;
}